--- a/src/main/resources/templates/room-booking-summary.html
+++ b/src/main/resources/templates/room-booking-summary.html
@@ -54,6 +54,8 @@
                                         <th th:text="${checkOut}"> </th>
                                     </tr>
                                 </table>
+<!--                                <button type="submit" class="btn btn-primary"  >Proceed to Payment</button>  -->
+
                             </form>
                     </div>
                 </div>
