--- a/src/main/resources/templates/feedback.html
+++ b/src/main/resources/templates/feedback.html
@@ -30,16 +30,14 @@
             </div>
             <div class="report-container">
                 <div class="container">
-                    <h2>Feedback Form</h2>
-                    <form th:object="${feedback}" th:action="@{/submitFeedback}" method="post">
-<!--                        <label for="name">Name:</label>-->
-                        <label >Name:</label>
-                        <input type="text"  required /><br />
+                    <h1>Feedback Form</h1>
+                    <form action="/feedback-output" method="post"  modelAttribute="feedback">
+                        <label for="name">Your Name:</label><br>
+                        <input type="text" id="name" name="name"  required><br><br>
 
-<!--                        <label for="comment">Comment:</label>-->
-                        <label >Comment:</label>
-                        <textarea required></textarea><br />
-
+                        <label for="comment">Your Feedback:</label><br>
+                        <textarea id="comment" name="comment"  required></textarea><br><br>
+                     <!--   <button><a th:href="feedback-output" style="text-decoration:none">Submit Feedback</a></button>  -->
                         <button type="submit">Submit Feedback</button>
                     </form>
                 </div>
