--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -9,33 +9,34 @@
                 </div>
 
                 <div class="option2 nav-option">
-                    <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210183322/9.png" class="nav-img"
+                    <img src="https://img.icons8.com/?size=50&id=10698&format=png" class="nav-img"
                         alt="articles">
                   <!--  <h3><a href="room_booking.html" style="text-decoration:none">Room</a></h3>  -->
                     <h3><a th:href="room-booking" style="text-decoration:none">Room</a></h3>
                 </div>
 
                 <div class="nav-option option3">
-                    <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210183320/5.png" class="nav-img"
+                    <img src="https://img.icons8.com/?size=80&id=b4p0kAjqYDOk&format=png" class="nav-img"
                         alt="report">
                     <h3><a th:href="feedback" style="text-decoration:none">Feedback</a></h3>
                 </div>
 
                 <div class="nav-option option4">
-                    <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210183321/6.png" class="nav-img"
+                    <img src="https://img.icons8.com/?size=80&id=G0m82W4nFfPy&format=png" class="nav-img"
                         alt="institution">
-                    <h3><a href="canteen" style="text-decoration:none">Canteen</a></h3>
+                    <h3><a th:href="canteen" style="text-decoration:none">Canteen</a></h3>
                 </div>
 
                 <div class="nav-option option5">
-                    <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210183323/10.png" class="nav-img"
+                    <img src="https://img.icons8.com/fluency/2x/test-account.png" class="nav-img"
                         alt="blog">
                     <h3><a th:href="profile" style="text-decoration:none">Profile</a></h3>
                 </div>
                 <div class="nav-option logout">
-                    <img src="https://media.geeksforgeeks.org/wp-content/uploads/20221210183321/7.png" class="nav-img"
+                    <img src="https://img.icons8.com/?size=64&id=uJ5Fg2rsFpT6&format=png" class="nav-img"
                         alt="logout">
-                    <h3>Logout</h3>
+                    <h3><a th:href="login" style="text-decoration:none">Logout</a></h3>
+
                 </div>
 
             </div>
