--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -32,6 +32,13 @@
                         alt="blog">
                     <h3><a th:href="profile" style="text-decoration:none">Profile</a></h3>
                 </div>
+
+                <div class="nav-option logout">
+                    <img src="https://img.icons8.com/?size=64&id=uJ5Fg2rsFpT6&format=png" class="nav-img"
+                         alt="admin">
+                    <h3><a th:href="admin" style="text-decoration:none">Admin</a></h3>
+                </div>
+
                 <div class="nav-option logout">
                     <img src="https://img.icons8.com/?size=64&id=uJ5Fg2rsFpT6&format=png" class="nav-img"
                         alt="logout">
