--- a/src/main/resources/templates/canteen.html
+++ b/src/main/resources/templates/canteen.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="report-container">
-                <div class="container">
+             <div class="container">
                     <h1>Canteen Menu</h1>
 
                     <table class="table">
@@ -47,7 +47,7 @@
                             <td th:text="${food.description}"></td>
                             <td th:text="${food.foodCategory.name}"></td>
                             <td th:text="${food.price}"></td>
-                            <td> <button> add to cart</button></td>
+                            <td> <button> Add to Cart</button></td>
                         </tr>
                         </tbody>
                     </table>
