--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -34,13 +34,13 @@
                 </div>
 
                 <div class="nav-option logout">
-                    <img src="https://img.icons8.com/?size=64&id=uJ5Fg2rsFpT6&format=png" class="nav-img"
+                    <img src="https://cdn-icons-png.flaticon.com/128/9977/9977388.png" class="nav-img"
                          alt="admin">
                     <h3><a th:href="admin" style="text-decoration:none">Admin</a></h3>
                 </div>
 
                 <div class="nav-option logout">
-                    <img src="https://img.icons8.com/?size=64&id=uJ5Fg2rsFpT6&format=png" class="nav-img"
+                    <img src="https://cdn-icons-png.flaticon.com/128/10313/10313098.png" class="nav-img"
                         alt="logout">
                     <h3><a th:href="login" style="text-decoration:none">Logout</a></h3>
 
