--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -44,7 +44,7 @@
                  background-position: center;
                  background-repeat: no-repeat;
              }            .intro h1 {
-                          font-family: sans-serif;
+                           font-family:math;
                           font-size: 60px;
                           color: #fff;
                           font-weight: bold;
