--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,11 +1,12 @@
+
     @import url(
     "https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
     * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+    box-sizing: initial;
+    font-family: -webkit-body;
     }
 
     :root {
@@ -39,7 +40,7 @@
     }
 
     .logo {
-    font-size: 27px;
+    font-size: 34px;
     font-weight: 600;
     color: rgb(47, 141, 70);
     }
@@ -54,7 +55,7 @@
     .searchbar,
     .message,
     .logosec {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     }
@@ -64,7 +65,7 @@
     }
 
     .logosec {
-    gap: 60px;
+    gap: 93px;
     }
 
     .searchbar input {
@@ -89,7 +90,7 @@
     }
 
     .message {
-    gap: 40px;
+    gap: 280px;
     position: relative;
     cursor: pointer;
     }
@@ -149,20 +150,6 @@
     flex-wrap: wrap;
     gap: 50px;
     }
-    .nav {
-    min-height: 91vh;
-    width: 250px;
-    background-color: var(--background-color2);
-    position: absolute;
-    top: 0px;
-    left: 00;
-    box-shadow: 1px 1px 10px rgba(198, 189, 248, 0.825);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow: hidden;
-    padding: 30px 0 20px 10px;
-    }
     .navcontainer {
     height: calc(100vh - 70px);
     width: 250px;
@@ -199,7 +186,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
     }
 
     .option1 {
@@ -463,7 +449,7 @@
 /* Styling for Paragraphs */
 .text-container p {
   color: #666; /* Medium Gray Text Color */
-  line-height: 1.6; /* Improved Readability with Slightly Increased Line Height */
+  line-height: 0.5; /* Improved Readability with Slightly Increased Line Height */
   margin-top: 0; /* Remove Default Margin */
   margin-bottom: 15px; /* Add Margin Below Paragraphs */
 }
@@ -486,7 +472,7 @@
   border-radius: 8px; /* Rounded Corners */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Box Shadow for Depth */
   padding: 20px; /* Add padding for spacing */
-  font-family: Arial, sans-serif; /* Specify Font Family */
+  font-family:system-ui; /* Specify Font Family */
 }
 
 /* Styling for Report Title */
@@ -508,7 +494,7 @@
 /* Styling for Paragraphs */
 .report-paragraph {
   color: #666666; /* Medium Gray Text Color */
-  line-height: 1.6; /* Improved Readability with Slightly Increased Line Height */
+  line-height: 0.5; /* Improved Readability with Slightly Increased Line Height */
   margin-top: 0; /* Remove Default Margin */
   margin-bottom: 15px; /* Add Margin Below Paragraphs */
 }
@@ -604,7 +590,7 @@
   width: 200px; /* Set width of images */
   height: 200px; /* Set height of images */
   margin: 10px; /* Add margin around each image */
-  border: 1px solid #ccc; /* Add border to images */
+  border: 10px solid #ccc; /* Add border to images */
   border-radius: 5px; /* Add rounded corners to images */
   box-sizing: border-box; /* Ensure padding and border are included in width */
 }
@@ -825,30 +811,38 @@ body {
 }
 
 
+body {
+            background-color: #6610f2;
+            font-family: 'Roboto', sans-serif;
+        }
+        .profile-card {
+            background-color: #fff;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            padding: 20px;
+            margin-top: 30px;
+        }
+        .card-header {
+            background-color: #007bff;
+            color: #fff;
+            border-radius: 8px 8px 0 0;
+        }
+        .history-card {
+            background-color: #fff;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            padding: 20px;
+            margin-top: 30px;
+        }
+        .history-card .card-header {
+            background-color: #6c757d;
+            color: #fff;
+            border-radius: 8px 8px 0 0;
+        }
 
-.container {
-    width: 80%; /* Adjust the width of the container as needed */
-    margin: 0 auto; /* Center the container horizontally */
-}
 
-h1 {
-    margin-bottom: 20px; /* Add space below the h1 header */
-}
-
-h2 {
-    margin-top: 10px; /* Add space above each h2 header */
-}
-
-form {
-    margin-top: 0px; /* Add space between the h1 header and the form */
-}
-
-select, button {
-    margin-top: 0px; /* Add space between elements */
-}
-
-#totalPrice {
-    font-weight: bold; /* Make the total price bold */
-}
-
-
+/*  frame to the roomtype option*/
+         .option-frame {
+              border: 2px solid #ccc;
+              padding: 10px;
+              margin-bottom: 10px;
