--- a/src/main/resources/templates/canteen-summary.html
+++ b/src/main/resources/templates/canteen-summary.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="report-container">
-            <div class="container mt-5">
+            <div class="container">
                 <div class="card">
                     <div class="card-body">
                         <h2 class="card-title mb-4">Room Booking</h2>
