--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,11 +9,12 @@
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
+
 <style>
     /* Reset CSS */
     body {
         margin: 0;
-        box-sizing: border-box;
+        box-sizing: initial;
     }
 
     /* Header */
@@ -27,7 +28,7 @@
 
     .header .logo {
         font-size: 25px;
-        font-family: 'Sriracha', cursive;
+        font-family: math;
         color: #000;
         text-decoration: none;
     }
@@ -67,7 +68,7 @@
     }
 
     .intro h1 {
-        font-family: 'Roboto', sans-serif;
+        font-family:math;
         font-size: 60px;
         font-weight: bold;
         text-transform: uppercase;
@@ -76,6 +77,7 @@
 
     .intro p {
         font-size: 20px;
+         font-family:math;
         text-transform: uppercase;
         margin: 20px 0;
     }
@@ -209,7 +211,32 @@
     .bottom-links .links a:hover {
         color: #fff;
     }
-    </style>
+    .intro {
+    text-align: center;
+    margin-top: 10px; /* Adjust as needed */
+}
+
+.intro button {
+    background-color: #007bff; /* Button color */
+    color: #fff; /* Text color */
+    border: none;
+    padding: 10px 20px;
+    font-size: 20px;
+    cursor: pointer;
+     font-family: math;
+    border-radius: 5px;
+    margin-top: 20px; /* Adjust as needed */
+}
+
+.intro button:hover {
+    background-color: #0056b3; /* Hover color */
+}
+
+.intro button a {
+    text-decoration: none;
+    color: inherit; /* Inherit color from parent */
+}
+</style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
