--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -29,54 +30,86 @@
             </div>
             <div class="report-container">
                 <div class="container">
-                    <h1>User Profile</h1>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-8 offset-md-2">
+                                <!-- Profile Card -->
+                                <div class="card profile-card">
+                                    <div class="card-header">
+                                        <h2 class="text-center">User Profile</h2>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="form-group">
+                                            <label for="name">Name:</label>
+                                       <!--     <input type="text" class="form-control" id="name" th:value="${user.name}" readonly>  -->
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="email">Email:</label>
+                                      <!--      <input type="email" class="form-control" id="email" th:value="${user.email}" readonly>  -->
+                                        </div>
 
-                    <div>
-                        <h2>User Details</h2>
-                     <!--   <p th:text="${user.firstName + ' ' + user.lastName}"></p>  -->
-                    <!--    <p th:text="${user.email}"></p>  -->
-                        <!-- Add more user details as needed -->
+                                    </div>
+                                </div>
+                                <!-- Room Booking History -->
+                                <div class="card history-card">
+                                    <div class="card-header">
+                                        <h2 class="text-center">Room Booking History</h2>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="table-responsive">
+                                            <table class="table table-striped">
+                                                <thead>
+                                                <tr>
+                                                    <th>Room</th>
+                                                    <th>Check-in Date</th>
+                                                    <th>Check-out Date</th>
+                                                </tr>
+                                                </thead>
+                                                <!--       <tbody>
+                                                   <tr th:each="booking : ${user.roomBookings}">
+                                                         <td th:text="${booking.roomName}"></td>
+                                                         <td th:text="${booking.checkInDate}"></td>
+                                                         <td th:text="${booking.checkOutDate}"></td>
+                                                     </tr>
+                                                </tbody>    -->
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Food Order History -->
+                                <div class="card history-card">
+                                    <div class="card-header">
+                                        <h2 class="text-center">Food Order History</h2>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="table-responsive">
+                                            <table class="table table-striped">
+                                                <thead>
+                                                <tr>
+                                                    <th>Food Item</th>
+                                                    <th>Quantity</th>
+                                                    <th>Date</th>
+                                                </tr>
+                                                </thead>
+                                                <!--     <tbody>
+                                                   <tr th:each="order : ${user.foodOrders}">
+                                                        <td th:text="${order.foodItem}"></td>
+                                                        <td th:text="${order.quantity}"></td>
+                                                        <td th:text="${order.date}"></td>
+                                                    </tr>
+                                                </tbody>  -->
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-
-                    <div>
-                        <h2>Booking History</h2>
-                        <table border="1">
-                            <thead>
-                            <tr>
-                                <th>Room</th>
-                                <th>Check-in Date</th>
-                                <th>Check-out Date</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                         <!--   <tr th:each="booking : ${user.bookingHistory}">
-                                <td th:text="${booking.roomName}"></td>
-                                <td th:text="${booking.checkInDate}"></td>
-                                <td th:text="${booking.checkOutDate}"></td>
-                            </tr>  -->
-                            </tbody>
-                        </table>
-                    </div>
-
-                    <div>
-                        <h2>Food Order History</h2>
-                        <table border="1">
-                            <thead>
-                            <tr>
-                                <th>Item</th>
-                                <th>Quantity</th>
-                                <th>Order Date</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                         <!--   <tr th:each="order : ${user.foodOrderHistory}">
-                                <td th:text="${order.itemName}"></td>
-                                <td th:text="${order.quantity}"></td>
-                                <td th:text="${order.orderDate}"></td>
-                            </tr>  -->
-                            </tbody>
-                        </table>
-                    </div>
+                    <!-- Bootstrap JS -->
+                    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+                </div>
                     </div>
                 </div>
             </div>
