--- a/src/main/resources/templates/paymentConfirmation.html
+++ b/src/main/resources/templates/paymentConfirmation.html
@@ -12,10 +12,10 @@
 
 <body>
     <!-- for header part -->
-    <div th:replace="fragments/header :: header"></div>
+    <div th:replace="~{fragments/header :: header}"></div>
     <div class="main-container">
         
-        <div th:replace="fragments/navbar :: navbar"></div>
+        <div th:replace="~{fragments/navbar :: navbar}"></div>
 
         <div class="main">
 
