--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -16,10 +16,10 @@
 
 <body>
 <!-- for header part -->
-<div th:replace="fragments/header :: header"></div>
+<div th:replace="~{fragments/header :: header}"></div>
 
 <div class="main-container">
-    <div th:replace="fragments/navbar :: navbar"></div>
+    <div th:replace="~{fragments/navbar :: navbar}"></div>
     <div class="main">
 
         <div class="searchbar2">
