--- a/src/main/resources/templates/canteen-summary.html
+++ b/src/main/resources/templates/canteen-summary.html
@@ -18,9 +18,9 @@
 
 <body>
 <!-- for header part -->
-<div th:replace="fragments/header :: header"></div>
+<div th:replace="~{fragments/header :: header}"></div>
 <div class="main-container">
-    <div th:replace="fragments/navbar :: navbar"></div>
+    <div th:replace="~{fragments/navbar :: navbar}"></div>
     <div class="main">
 
         <!-- <h1 th:text="${minDate}"></h1> -->
