--- a/src/main/resources/templates/room-booking-summary.html
+++ b/src/main/resources/templates/room-booking-summary.html
@@ -17,9 +17,9 @@
 
 <body>
     <!-- for header part -->
-    <div th:replace="fragments/header :: header"></div>
+    <div th:replace="~{fragments/header :: header}"></div>
     <div class="main-container">
-        <div th:replace="fragments/navbar :: navbar"></div>
+        <div th:replace="~{fragments/navbar :: navbar}"></div>
         <div class="main">
 
            <!-- <h1 th:text="${minDate}"></h1> -->
