--- a/src/main/resources/templates/room-booking.html
+++ b/src/main/resources/templates/room-booking.html
@@ -39,9 +39,9 @@
 
 <body>
 <!-- for header part -->
-<div th:replace="fragments/header :: header"></div>
+<div th:replace="~{fragments/header :: header}"></div>
 <div class="main-container">
-    <div th:replace="fragments/navbar :: navbar"></div>
+    <div th:replace="~{fragments/navbar :: navbar}"></div>
     <div class="main">
         <div class="searchbar2">
             <input type="text" name="" id="" placeholder="Search">
